--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         run: npm install
       
       - name: Run Tests
-        run: npm tests
+        run: npm test
 
       - name: Install Syft and Gripe
         run: |
