--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
           export PATH=$HOME/.local/bin:$PATH
 
       - name: Generate SBOM with Syft
-        uses: anchore/syft-action@v1
+        uses: anchore/sbom-action@v0
         with:
           output: sbom.json
           format: json
